force-app/main/default/objects/EccOpptyDataLogiDummy__c/EccOpptyDataLogiDummy__c.object-meta.xml
<CustomObject>
    <label>EccOpptyDataLogiDummy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EccOpptyDataLogiDummies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>