force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/AM_EMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>AM_EMP_NAME__c</fullName>
    <label>AM_EMP_NAME</label>
    <length>20</length>
    <type>Text</type>
</CustomField>