force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/BID_EST_DTM__c.field-meta.xml
<CustomField>
    <fullName>BID_EST_DTM__c</fullName>
    <label>BID_EST_DTM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>