force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/BIG_ACCOUNT_YN__c.field-meta.xml
<CustomField>
    <fullName>BIG_ACCOUNT_YN__c</fullName>
    <label>BIG_ACCOUNT_YN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>