force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/BIZ_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BIZ_TYPE__c</fullName>
    <label>BIZ_TYPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>