force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/BO_CLASS__c.field-meta.xml
<CustomField>
    <fullName>BO_CLASS__c</fullName>
    <label>BO_CLASS</label>
    <length>2</length>
    <type>Text</type>
</CustomField>