force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/BO_LBS_CLASS__c.field-meta.xml
<CustomField>
    <fullName>BO_LBS_CLASS__c</fullName>
    <label>BO_LBS_CLASS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>