force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/BO_OVERVIEW__c.field-meta.xml
<CustomField>
    <fullName>BO_OVERVIEW__c</fullName>
    <label>BO_OVERVIEW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>