force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/BO_STATUS__c.field-meta.xml
<CustomField>
    <fullName>BO_STATUS__c</fullName>
    <label>BO_STATUS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>