force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/CGUBUN_ID__c.field-meta.xml
<CustomField>
    <fullName>CGUBUN_ID__c</fullName>
    <label>CGUBUN_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>