force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/COMPANY_ACCOUNT_DESC__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_ACCOUNT_DESC__c</fullName>
    <label>COMPANY_ACCOUNT_DESC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>