force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/COMPANY_ID__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_ID__c</fullName>
    <label>COMPANY_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>