force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/COMPETITORS__c.field-meta.xml
<CustomField>
    <fullName>COMPETITORS__c</fullName>
    <label>COMPETITORS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>