force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/CONTACTTEXT__c.field-meta.xml
<CustomField>
    <fullName>CONTACTTEXT__c</fullName>
    <label>CONTACTTEXT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>