force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/CONTRACT_TERM_FROM__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TERM_FROM__c</fullName>
    <label>CONTRACT_TERM_FROM</label>
    <length>8</length>
    <type>Text</type>
</CustomField>