force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/CONTRACT_TERM_TO__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TERM_TO__c</fullName>
    <label>CONTRACT_TERM_TO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>