force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/CURRENCY_CODE__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY_CODE__c</fullName>
    <label>CURRENCY_CODE</label>
    <length>6</length>
    <type>Text</type>
</CustomField>