force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/DEVELOP_DEPT_CODE__c.field-meta.xml
<CustomField>
    <fullName>DEVELOP_DEPT_CODE__c</fullName>
    <label>DEVELOP_DEPT_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>