force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/DLVRY_AREA_CCD__c.field-meta.xml
<CustomField>
    <fullName>DLVRY_AREA_CCD__c</fullName>
    <label>DLVRY_AREA_CCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>