force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/DOM_ABR_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DOM_ABR_TYPE__c</fullName>
    <label>DOM_ABR_TYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>