force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/DU_ORDER_DATE__c.field-meta.xml
<CustomField>
    <fullName>DU_ORDER_DATE__c</fullName>
    <label>DU_ORDER_DATE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>