force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/IN_OUT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>IN_OUT_TYPE__c</fullName>
    <label>IN_OUT_TYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>