force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/INS_PERSON_ID__c.field-meta.xml
<CustomField>
    <fullName>INS_PERSON_ID__c</fullName>
    <label>INS_PERSON_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>