force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/KEY_ACCOUNT_YN__c.field-meta.xml
<CustomField>
    <fullName>KEY_ACCOUNT_YN__c</fullName>
    <label>KEY_ACCOUNT_YN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>