force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/LBS_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>LBS_Exception_Type__c</fullName>
    <label>LBS_Exception_Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>