force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/LOCAL_CURRENCY_CODE__c.field-meta.xml
<CustomField>
    <fullName>LOCAL_CURRENCY_CODE__c</fullName>
    <label>LOCAL_CURRENCY_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>