force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/LOCAL_ORDER_AMT__c.field-meta.xml
<CustomField>
    <fullName>LOCAL_ORDER_AMT__c</fullName>
    <label>LOCAL_ORDER_AMT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>