force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/LOST_REASON__c.field-meta.xml
<CustomField>
    <fullName>LOST_REASON__c</fullName>
    <label>LOST_REASON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>