force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/ORDER_AMT__c.field-meta.xml
<CustomField>
    <fullName>ORDER_AMT__c</fullName>
    <label>ORDER_AMT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>