force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/ORDER_NAME__c.field-meta.xml
<CustomField>
    <fullName>ORDER_NAME__c</fullName>
    <label>ORDER_NAME</label>
    <length>120</length>
    <type>Text</type>
</CustomField>