force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/ORDER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ORDER_TYPE__c</fullName>
    <label>ORDER_TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>