force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/ORIGINAL_COMPANY_ID__c.field-meta.xml
<CustomField>
    <fullName>ORIGINAL_COMPANY_ID__c</fullName>
    <label>ORIGINAL_COMPANY_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>