force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/PROBABILITY__c.field-meta.xml
<CustomField>
    <fullName>PROBABILITY__c</fullName>
    <label>PROBABILITY</label>
    <length>10</length>
    <type>Text</type>
</CustomField>