force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/RLBS_SVC_TCD__c.field-meta.xml
<CustomField>
    <fullName>RLBS_SVC_TCD__c</fullName>
    <label>RLBS_SVC_TCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>