force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/SALES_COST_CD__c.field-meta.xml
<CustomField>
    <fullName>SALES_COST_CD__c</fullName>
    <label>SALES_COST_CD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>