force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/SALES_DEPT_COST_CENTER__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPT_COST_CENTER__c</fullName>
    <label>SALES_DEPT_COST_CENTER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>