force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/SALES_EMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>SALES_EMP_NAME__c</fullName>
    <label>SALES_EMP_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>