force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/SALES_PRNT_ORG_CD__c.field-meta.xml
<CustomField>
    <fullName>SALES_PRNT_ORG_CD__c</fullName>
    <label>SALES_PRNT_ORG_CD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>