force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/SAP_COMPANY__c.field-meta.xml
<CustomField>
    <fullName>SAP_COMPANY__c</fullName>
    <label>SAP_COMPANY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>