force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/SHPR_CCD__c.field-meta.xml
<CustomField>
    <fullName>SHPR_CCD__c</fullName>
    <label>SHPR_CCD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>