force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/TECH_PROP__c.field-meta.xml
<CustomField>
    <fullName>TECH_PROP__c</fullName>
    <label>TECH_PROP</label>
    <length>2</length>
    <type>Text</type>
</CustomField>