force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/UDATE_DROP__c.field-meta.xml
<CustomField>
    <fullName>UDATE_DROP__c</fullName>
    <label>UDATE_DROP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>