force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/UDATE_LOSE__c.field-meta.xml
<CustomField>
    <fullName>UDATE_LOSE__c</fullName>
    <label>UDATE_LOSE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>