force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/UDATE_VRB__c.field-meta.xml
<CustomField>
    <fullName>UDATE_VRB__c</fullName>
    <label>UDATE_VRB</label>
    <length>8</length>
    <type>Text</type>
</CustomField>