force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/UDATE_ZP21__c.field-meta.xml
<CustomField>
    <fullName>UDATE_ZP21__c</fullName>
    <label>UDATE_ZP21</label>
    <length>8</length>
    <type>Text</type>
</CustomField>