force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/UPD_PERSON_ID__c.field-meta.xml
<CustomField>
    <fullName>UPD_PERSON_ID__c</fullName>
    <label>UPD_PERSON_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>