force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/UPDATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>UPDATE_DATE__c</fullName>
    <label>UPDATE_DATE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>