force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/USER_ID__c.field-meta.xml
<CustomField>
    <fullName>USER_ID__c</fullName>
    <label>USER_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>