force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/ZZCOOPER__c.field-meta.xml
<CustomField>
    <fullName>ZZCOOPER__c</fullName>
    <label>ZZCOOPER</label>
    <length>1</length>
    <type>Text</type>
</CustomField>