force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/ZZSALESSTR__c.field-meta.xml
<CustomField>
    <fullName>ZZSALESSTR__c</fullName>
    <label>ZZSALESSTR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>