force-app/main/default/objects/EccOpptyDataLogiDummy__c/fields/ZZSTATUS__c.field-meta.xml
<CustomField>
    <fullName>ZZSTATUS__c</fullName>
    <label>ZZSTATUS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>